--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<link rel="icon" href="/assets/image/favicon.png" />
+		<link rel="icon" href="/assets/image/36x36.png" sizes="36x36" />
+		<link rel="icon" href="/assets/image/48x48.png" sizes="48x48" />
+		<link rel="icon" href="/assets/image/72x72.png" sizes="72x72" />
+		<link rel="icon" href="/assets/image/96x96.png" sizes="96x96" />
+		<link rel="icon" href="/assets/image/144x144.png" sizes="144x144" />
+		<link rel="icon" href="/assets/image/192x192.png" sizes="192x192" />
 		<title>Interactive Kiosk</title>
 	</head>
 	<body>
 		<noscript>
-			<strong>자바스크립트를 활성화해주세요.</strong>
+			<strong>JavaScript를 활성화 해주세요.</strong>
 		</noscript>
 		<div id="app"></div>
-		<!-- built files will be auto injected -->
 	</body>
 </html>
